fix: header layout on mobile and back buton color

--- a/src/app/style/_index.scss
+++ b/src/app/style/_index.scss
@@ -19,7 +19,6 @@
 		display: flex;
 		gap: 20px;
 		.back-button {
-			color: inherit;
 			margin: 5px;
 			width: 30px;
 			height: 30px;
@@ -39,7 +38,6 @@ main {
 
 @media (max-width: $medium) {
 	.header {
-		flex-direction: column;
 		align-items: flex-start;
 		& h1 {
 			font-size: 22px;
